Vertical scrollbar problem is solved

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 :root {
     --main-color: #CE2127;
     --secondary-color: #fdfdfd;
@@ -12,4 +16,4 @@
 /* For navbar dropdown */
 .dropdown:hover .dropdown-menu {
     display: block;
-  }
+}
